--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "website for all the study materials",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "indes.js"
   },
   "author": "TUSHAR",
   "license": "ISC",
